fix: Removes min-width of contact section that was causing overflow

--- a/css/index.css
+++ b/css/index.css
@@ -457,7 +457,6 @@ footer {
 .form-wrapper,
 .repo-wrapper {
   align-self: stretch;
-  min-width: 400px;
   max-width: 600px;
   flex: 1;
   margin: 0 auto;
